k8s/apps/internal/wikijs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      namespace: wikijs
      labels:
        app: wikijs
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: wikijs
          image: requarks/wiki:latest
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
          #FIXME
            # requests:
            #   cpu: 50m
            #   memory: 12Mi
            # limits:
            #   cpu: 1000m
            #   memory: 24Mi
