k8s/apps/internal/wikijs/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
spec:
  type: ClusterIP
  selector:
    app: wikijs
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
