k8s/apps/internal/wikijs/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wikijs-http
  namespace: wikijs
spec:
  parentRefs:
    - name: insecure
      namespace: gateway
  hostnames:
    - wiki.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wikijs
          port: 80
