k8s/apps/internal/wikijs/https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wikijs-https
  namespace: wikijs
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - wiki.emisia.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wikijs
          port: 80
